--- a/MISA.CukCuk/MISA.CukCuk/wwwroot/css/layout/content.css
+++ b/MISA.CukCuk/MISA.CukCuk/wwwroot/css/layout/content.css
@@ -14,6 +14,7 @@
 
      .content-header .option {
         float: left;
+        position: absolute;
         width: 180px;
         height: 30px;
         margin-top: 10px;
@@ -27,12 +28,13 @@
             height: 100%;
         }
 
-     .content-header .language {
+    .content-header .language {
         float: left;
+        position: absolute;
         width: 180px;
         height: 30px;
         margin-top: 10px;
-        margin-left: 340px;
+        left: calc(100% - 570px);
     }
 
          .content-header .language select {
@@ -42,30 +44,32 @@
             width: 100%;
             height: 100%;
         }
-.content-header .logo-noti {
-    height: 30px;
-    width: 30px;
-    margin: 10px;
-    margin-top: 10px;
-    margin-left: 25px;
-    float: left;
-}
+    .content-header .logo-noti {
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        margin: 10px;
+        margin-top: 10px;
+        left: calc(100% - 380px);
+        float: left;
+    }
 
-.content-header .logo-call {
-    height: 30px;
-    width: 30px;
-    margin: 10px;
-    margin-left: 50px;
-    float: left;
-
-}
+    .content-header .logo-call {
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        margin-top: 10px;
+        left: calc(100% - 240px);
+        float: left;
+    }
 
     .content-header .acount {
+        position: absolute;
         float: left;
         height: 30px;
         width: 200px;
-        margin-top: 10px;
-        margin-left: 10px
+        top: 10px;
+        left: calc(100% - 180px);
     }
 
 .acount .acount-image {
@@ -118,26 +122,30 @@
         margin: 12px 0px 5px 10px;
     }
         .content-body .page-title .back {
+            position: absolute;
             padding: 5px;
             padding-left: 20px;
             padding-right: 20px;
             border: 1px solid #000;
             float: left;
-            margin: 6px 0px 5px 540px;
+            top: 10px;
+            left: calc(100% - 350px);
         }
 
 .back:hover {
     background-color: #0973b9;
     cursor: pointer;
 }
-            .content-body .page-title .feedback {
-            padding: 5px;
-            border: 1px solid #000;
-            float: left;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin: 6px 0px 5px 10px;
-        }
+.content-body .page-title .feedback {
+    position: absolute;
+    padding: 5px;
+    border: 1px solid #000;
+    float: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    top: 10px;
+    left: calc(100% - 130px);
+}
 .feedback:hover {
     background-color: #0973b9;
     cursor: pointer;
@@ -223,10 +231,12 @@
 
 /*modal css*/
 .modal{
-    position: fixed;
+    display: none;
+    position: absolute;
     top: 0;
-    width: 100%;
-    height: 100vh;
+    right: 0;
+    left: 0;
+    bottom: 0;
     background-color: #272525;
     opacity: 0.4;
 }
