--- a/MISA.CukCuk/MISA.CukCuk/wwwroot/css/category/customer.css
+++ b/MISA.CukCuk/MISA.CukCuk/wwwroot/css/category/customer.css
@@ -2,13 +2,7 @@
 .grid-content .grid {
     border: 1px solid #e8e1e1;
     width: 100%;
-    height: calc( 100% - 25px);
-}
-
-.grid-content .paging {
-    height: 25px;
-    width: 100%;
-    background-color: #000;
+    height: calc( 100% - 50px);
 }
 
 /*Table*/
@@ -16,21 +10,162 @@
     width: 100%;
     border-collapse: collapse;
     border: 1px solid #e8e1e1;
+    overflow-x: scroll;
 }
 
 .grid td, th {
     padding: 6px;
     border: 1px solid #e8e1e1;
 }
-.grid thead{
+
+.grid thead {
     background-color: rgb(239,239,239);
 }
 
 .grid tr:nth-child(even) {
     background-color: #f9f9f9;
 }
-.grid tbody tr:hover{
+
+.grid tbody tr:hover {
     background-color: #bbd3db;
     cursor: pointer;
 }
 
+/* Paging css*/
+.grid-content .paging {
+    position: relative;
+    height: 25px;
+    width: 100%;
+    background-color: #f9f9f9;
+}
+
+    .grid-content .paging .page-first {
+        float: left;
+        position: absolute;
+        display: block;
+        width: 20px;
+        height: 20px;
+        top: 3px;
+        background-image: url('../../content/images/grid/page-first.png');
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+
+    .grid-content .paging .page-previous {
+        float: left;
+        position: absolute;
+        display: block;
+        width: 20px;
+        height: 20px;
+        left: 30px;
+        top: 3px;
+        background-image: url('../../content/images/grid/page-prev.png');
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+
+    .grid-content .paging .page-text-first {
+        float: left;
+        position: absolute;
+        width: 40px;
+        height: 15px;
+        padding-left: 10px;
+        border-left: 1px solid #e8e1e1;
+        left: 60px;
+        top: 3px;
+    }
+
+    .grid-content .paging .page-amount {
+        float: left;
+        position: absolute;
+        width: 40px;
+        height: 20px;
+        border: 1px solid #e8e1e1;
+        left: 120px;
+        top: 0px;
+    }
+
+    .grid-content .paging .page-text-second {
+        float: left;
+        position: absolute;
+        width: 40px;
+        height: 20px;
+        padding-right: 10px;
+        border: none;
+        left: 180px;
+        top: -12px;
+    }
+    .grid-content .paging .page-sum {
+        float: left;
+        position: absolute;
+        width: 20px;
+        height: 15px;
+        border: none;
+        border-right: 1px solid #e8e1e1;
+        left: 210px;
+        top: 4px;
+    }
+    .grid-content .paging .page-next {
+        float: left;
+        position: absolute;
+        display: block;
+        width: 20px;
+        height: 20px;
+        top: 3px;
+        left: 250px;
+        background-image: url('../../content/images/grid/page-next.png');
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+
+    .grid-content .paging .page-last {
+        float: left;
+        position: absolute;
+        display: block;
+        width: 20px;
+        height: 20px;
+        left: 280px;
+        top: 3px;
+        background-image: url('../../content/images/grid/page-last.png');
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+        
+        .grid-content .paging .page-refresh {
+            float: left;
+            position: absolute;
+            display: block;
+            width: 50px;
+            height: 20px;
+            left: 310px;
+            border-left: 1px solid #e8e1e1;
+            border-right: 1px solid #e8e1e1;
+            top: 3px;
+            
+        }
+            .grid-content .paging .page-refresh .page-refresh-icon {
+                height: 100%;
+                width: 20px;
+                background-image: url('../../content/images/grid/refresh.png');
+                background-repeat: no-repeat;
+                background-position: left;
+                margin-left: 17px;
+            }
+    .grid-content .paging .page-selected {
+        float: left;
+        position: absolute;
+        width: 55px;
+        background-color: #f9f9f9;
+        height: 23px;
+        top: 1px;
+        left: 370px;
+        border: 1px solid #ddd6d6;
+    }
+
+    .grid-content .paging .page-text-third {
+        position: absolute;
+        width: 220px;
+        height: 20px;
+        left: calc(100% - 200px);
+        top: 5px;
+    }
