--- a/MISA.CukCuk/MISA.CukCuk/wwwroot/css/layout/content.css
+++ b/MISA.CukCuk/MISA.CukCuk/wwwroot/css/layout/content.css
@@ -6,13 +6,14 @@
 }
 
 /*Content header*/
- .content-header {
+.content-header {
+    position: relative;
     height: 50px;
     background-color: #2973b9;
     display: flex;
 }
 
-     .content-header .option {
+    .content-header .option {
         float: left;
         position: absolute;
         width: 180px;
@@ -20,7 +21,7 @@
         margin-top: 10px;
     }
 
-         .content-header .option select {
+        .content-header .option select {
             background-color: #02498e;
             border: none;
             color: #fff;
@@ -30,47 +31,51 @@
 
     .content-header .language {
         float: left;
-        position: absolute;
         width: 180px;
+        position: absolute;
         height: 30px;
         margin-top: 10px;
-        left: calc(100% - 510px);
+        margin-left: calc(100% - 490px);
     }
 
-         .content-header .language select {
+        .content-header .language select {
             background-color: #02498e;
             border: none;
             color: #fff;
             width: 100%;
             height: 100%;
         }
+
     .content-header .logo-noti {
         position: absolute;
         height: 30px;
         width: 30px;
         margin: 10px;
         margin-top: 10px;
-        left: calc(100% - 300px);
+        left: calc(100% - 295px);
         float: left;
     }
-        .content-header .logo-noti .fa-globe{
+
+        .content-header .logo-noti .fa-globe {
             position: absolute;
-            top: 10px; 
+            top: 10px;
         }
-            .content-header .logo-noti .fa-globe:hover{
+
+            .content-header .logo-noti .fa-globe:hover {
                 cursor: pointer;
             }
-            .content-header .logo-noti .amount-noti {
-                position: absolute;
-                background-color: #f00;
-                padding: 5px;
-                padding-top: 2px;
-                padding-bottom: 2px;
-                color: #fff;
-                left: 10px;
-                bottom: 2px;
-                font-size: 10px;
-            }
+
+        .content-header .logo-noti .amount-noti {
+            position: absolute;
+            background-color: #f00;
+            padding: 5px;
+            padding-top: 2px;
+            padding-bottom: 2px;
+            color: #fff;
+            left: 10px;
+            bottom: 2px;
+            font-size: 10px;
+        }
 
     .content-header .logo-call {
         position: absolute;
@@ -83,7 +88,7 @@
         top: -5px;
         float: left;
     }
-            
+
 
     .content-header .acount {
         position: absolute;
@@ -91,7 +96,7 @@
         height: 30px;
         width: 200px;
         top: 10px;
-        left: calc(100% - 180px);
+        left: calc(100% - 190px);
     }
 
 .acount .acount-logo {
@@ -102,6 +107,7 @@
     background-color: #ebe2e2;
     border-radius: 50px;
 }
+
     .acount .acount-logo .acount-logo-image {
         background-image: url('../../content/images/EmployeeImage.png');
         background-repeat: no-repeat;
@@ -111,21 +117,22 @@
         position: absolute;
         left: 13px;
     }
-    .acount .acount-name {
-        background-color: #2973b9;
-        float: left;
-        width: calc(100% - 40px);
-        height: 100%;
-    }
 
-        .acount .acount-name select {
-            background-color: #2973b9;
-            border: none;
-            width: 80%;
-            height: 30px;
-            color: white;
-            margin: auto;
-        }
+.acount .acount-name {
+    background-color: #2973b9;
+    float: left;
+    width: calc(100% - 50px);
+    height: 100%;
+}
+
+    .acount .acount-name select {
+        background-color: #2973b9;
+        border: none;
+        width: 90%;
+        height: 30px;
+        color: white;
+        margin-left: 8px;
+    }
 
 /*Content body*/
 .content-body {
@@ -134,25 +141,30 @@
     padding-left: 10px;
     height: calc(100vh - 70px);
 }
-    .content-body .page-title{
+
+    .content-body .page-title {
         display: flex;
     }
-    .content-body .page-title h1 {
-        float: left;
-        margin: 5px 0px 5px 0px;
-        font-size: 22px;
-    }
-    .content-body .page-title h5 {
-        color: #2973b9;
-        float: left;
-        font-size: 15px;
-        margin: 12px 0px 5px 10px;
-    }
-    .content-body .page-title i {
-        color: #2973b9;
-        float: left;
-        margin: 12px 0px 5px 10px;
-    }
+
+        .content-body .page-title h1 {
+            float: left;
+            margin: 5px 0px 5px 0px;
+            font-size: 22px;
+        }
+
+        .content-body .page-title h5 {
+            color: #2973b9;
+            float: left;
+            font-size: 15px;
+            margin: 12px 0px 5px 10px;
+        }
+
+        .content-body .page-title i {
+            color: #2973b9;
+            float: left;
+            margin: 12px 0px 5px 10px;
+        }
+
         .content-body .page-title .back {
             position: absolute;
             padding: 5px;
@@ -168,38 +180,41 @@
     background-color: #0973b9;
     cursor: pointer;
 }
+
 .content-body .page-title .feedback {
     position: absolute;
-    padding: 5px;
+    padding: 4px;
     border: 1px solid #000;
     float: left;
     padding-left: 20px;
     padding-right: 20px;
     top: 10px;
-    left: calc(100% - 130px);
+    left: calc(100% - 128px);
 }
+
 .feedback:hover {
     background-color: #0973b9;
     cursor: pointer;
 }
-            .content-body .page-title .feedback .viewemail {
-                float: left;
-                display: block;
-                width: 20px;
-                height: 20px;
-                background-image: url('../../content/images/viewEmail.png');
-                background-repeat: no-repeat;
-                background-position: left;
-            }
 
-        .content-body .grid-content {
-            position: absolute;
-            border: none;
-            top: 50px;
-            left: 10px;
-            right: 10px;
-            bottom: 10px;
-        }
+.content-body .page-title .feedback .viewemail {
+    float: left;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-image: url('../../content/images/viewEmail.png');
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.content-body .grid-content {
+    position: absolute;
+    border: none;
+    top: 50px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+}
 
 .grid-content .toolbar {
     border: 1px solid #e8e1e1;
@@ -234,7 +249,7 @@
     .icon.icon-add {
         background-position: 0 -2648px;
     }
-     
+
     .icon.icon-edit {
         background-image: url('../../content/images/Edit16.png');
     }
@@ -242,27 +257,33 @@
     .icon.icon-del {
         background-position: 0 -2681px;
     }
+
     .icon.icon-copy {
         background-position: 0 -1887px;
     }
+
     .icon.icon-load {
         background-position: 0 -2585px;
     }
+
     .icon.icon-input {
         background-image: url('../../content/images/Import16.png');
     }
+
     .icon.icon-output {
         background-image: url('../../content/images/excel_97_24.png');
     }
+
     .icon.icon-merge {
         background-image: url('../../content/images/ic_GopKhachHang.png');
     }
+
     .icon.icon-question {
         background-position: 0 -1600px;
     }
 
 /*modal css*/
-.modal{
+.modal {
     display: none;
     position: absolute;
     top: 0;
@@ -272,5 +293,3 @@
     background-color: #272525;
     opacity: 0.4;
 }
-
-
